Fix T74713: Unpredictable active texture node for Workbench

The selection operator was not being correctly marked for update.
This restores the behavior seen in blender 2.79.